fixed scrollbar shifting issue
- modified div containers to have inline scrolling. this was done by
calculating the fixed header + tabs height (variable in main.scss) and
calculating the correct width for the tab divs, using calc(100vh -
$project-page-offset).

This has been implemented for Kanban Board, User List, and Task List

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,11 @@ $color-prioritiy: #F15B41, #FCB54E, #8EC975;
 $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
           #04AA51, #1991CD, #0857A3, #6C459B, #A54499, #E34197;
 
+// Used for calculating size of the container divs for each tab of the project page
+$header-height: 45px;
+$project-header-height: 113px;
+$project-page-offset: $header-height + $project-header-height;
+
 // General Utility Classes
 *.unselectable {
    -moz-user-select: -moz-none;
@@ -325,6 +330,8 @@ $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
 .kanban-board {
     display: relative;
     margin: 0 -15px;
+    overflow-y: scroll; 
+    height: calc(100vh - #{$project-page-offset});
 }
 
 .kanban-board-header {
@@ -476,6 +483,11 @@ $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
 }
 
 // Task List Styling
+.task-list-container {
+    overflow-y: scroll;
+    height: calc(100vh - #{$project-page-offset});
+}
+
 .task-list {
     @extend .table;
     @extend .table-hover;
@@ -527,4 +539,11 @@ $rainbow: #EB222A, #F36F26, #F68F22, #FEC317, #F4EA28, #9BCA3C,
             @include truncate(100px);
         }
     }
+}
+
+// User List styling specifications.
+.user-list-container {
+    @extend .container;
+    overflow-y: scroll;
+    height: calc(100vh - #{$project-page-offset});
 }
